Add exec:exec example